# quickjs-rust

./: .envrc  .gitignore  .markdown.json  .xonshrc  README.md  build.xsh  clean.sh  js_new_or_to.sh  make.md  package.json  pnpm-lock.yaml  quickjs.diff  requirements.txt  test.js  test.js.out  todo.md
lib/: render.py
quickjs_ffi/: .gitignore  Cargo.toml  build.rs  c.h
quickjs_ffi/src/: lib.rs
quickjs_rust/: .gitignore  gen.py  js_rust_funcs.h.mako  patch.py  quickjs_rust.h
readme/: zh-cn.md
rust/: Cargo.toml  build.rs  build.xsh  cbindgen.toml  dev.sh  rust.h
rust/sh/: udeps.sh
rust/src/: lib.rs  qjs.rs
rust/src/export/: .gitignore  fib.rs  mod.gen.py  mod.rs.mako  sleep.rs
rust/src/js/: arg.rs  mod.rs  val.rs
rust_macro/: Cargo.toml  dev.sh
rust_macro/src/: lib.rs
