[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_macro = { path = '../rust_macro' }
quickjs_ffi = { path = '../quickjs_ffi' }
async-executor = "1.4.1"
once_cell = "1.10.0"
parking_lot = "0.12.0"
async-io = "1.6.0"
futures-lite = "1.12.0"
easy-parallel = "3.2.0"
async-channel = "1.6.1"
num_cpus = "1.13.1"
smallvec = "1.8.0"
anyhow = "1.0.57"
#dashmap = "5.2.0"
const-cstr = "0.3.0"

#async-lock = "2.5.0"
#[build-dependencies]
#cbindgen = "0.23.0"
[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
debug-assertions = false
overflow-checks = false
opt-level = 3

#strip = true
[lib]
#crate-type = ["lib", "cdylib", "staticlib"]
crate-type = ["staticlib"]
